--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "composer/package-versions-deprecated": "^1.11",
+        "doctrine/doctrine-bundle": "^2.1",
+        "doctrine/doctrine-migrations-bundle": "^3.0",
+        "doctrine/orm": "^2.7",
         "friendsofsymfony/jsrouting-bundle": "^2.6",
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/asset": "5.1.*",
@@ -20,6 +24,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "5.1.*",
+        "symfony/maker-bundle": "^1.21",
         "symfony/stopwatch": "^5.1",
         "symfony/twig-bundle": "^5.1",
         "symfony/web-profiler-bundle": "^5.1"
